@@ -24,6 +24,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
       RemoveNotifyFd) to main thread.
     - (re)enable sessions debugging.
     - fix infinite loop if reading of cookie has failed.
+    - improve initialization of cursor frame and cache element structures.
 
   [ Mihai Moldovan ]
   * Initial release:
